--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -15,3 +15,19 @@
     margin-right: 10px;
     margin-left: 10px;
 }
+
+.done_btn {
+    width: 50%;
+}
+
+.edit_btn {
+    width: 50%;
+}
+
+.modal_close {
+    border-radius: 5px;
+}
+
+.model_delete {
+    border-radius: 5px;
+}
